feat: Implement solver tuning and benchmarking features with a new settings UI and improved constraint logic.